# nanollm

./: input_pipeline.py  main.py  model.py  opt_factory.py  pyproject.toml  train.py
.github/: README.md
.github/workflows/: ci.yml
configs/: default.py  sharding.py
notebooks/: nanollm_tiny_shakespeare.ipynb
tests/: conftest.py  test_optim.py  test_sharding.py
