[project]
name = "nanollm"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "clu>=0.0.12",
    "datasets>=3.6.0",
    "flax>=0.10.6",
    "jaxtyping>=0.3.2",
    "ml-collections>=1.1.0",
]

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["E", "F", "I001"]
ignore = ["F722"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
]
hf = [
    "huggingface-hub>=0.32.4",
]
wandb = [
    "wandb>=0.20.1",
]
