[project]
name = "nanollm"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "clu>=0.0.12",
    "datasets>=3.6.0",
    "flax>0.10.6,<0.11.0",
    "jaxtyping>=0.3.2",
    "ml-collections>=1.1.0",
    "optax>=0.2.5",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]
hf = [
    "huggingface-hub>=0.32.4",
]
wandb = [
    "wandb>=0.20.1",
]

[tool.ruff]
line-length = 90
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I001"]
ignore = ["F722"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "sharding: tests related to model sharding"
]
